static/css/main.css
body {
  font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, “Helvetica Neue”, Arial, sans-serif, “Apple Color Emoji”, “Segoe UI Emoji”, “Segoe UI Symbol”;
  /* default is 1rem or 16px */
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  }
   
  /* Increase all font sizes on mobile */
  @media (max-width: 767px) { 
   
  body {
  /* default is 1rem or 16px */
  font-size: 12px;
  }
   
  }

.table-help {
  width : auto;
}




@font-face {
  font-family: 'Arvo';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url('webfonts/arvo.woff2') format("woff2");
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

.Arvo {
  font-family: Arvo;
}

.w-30 {
  width : 30%;
}



  td {
    word-wrap:break-word;
    word-break:break-word;
  }

th {
  position: sticky;
  top: 0; 
  background: white;
  z-index: 2000;
  }

nav {
    margin-bottom: 4em;
}

@keyframes blinker {
    from {opacity: 1.0;}
    to {opacity: 0.0;}
  }


.text-monospace {
  font-size: 11px;
}

strike {
text-decoration: line-through;
}
  
  
.blink {
    text-decoration: blink;
    animation-name: blinker;
    animation-duration: 0.6s;
    animation-iteration-count:infinite;
    animation-timing-function:ease-in-out;
    animation-direction: alternate;
  }

  .span-button {
    display: inline-block;
    width: 85px;
    text-align: center; 
    vertical-align: middle;
  }

.p-center {
  text-align: center; 
  vertical-align: middle; 
  line-height: normal;
  margin-top: 0.3rem;
  margin-bottom: 0.3rem;
}

  .top-buffer-5 { margin-top:10px; }

  .top-buffer-10 { margin-top:10px; }

  .top-buffer-15 { margin-top:15px; }

  .top-buffer-20 { margin-top:20px; }

  .top-buffer-30 { margin-top:30px; }

  .red-semi-transparent{
    background-color: rgba(255, 0, 0, 0.6);
  }

  .li-shrunk {
    line-height: 1.5em;
    padding-top: 1em;
  }

  .btn-avrådd {
      border-color: #f44336;
      background-color: rgba(255, 0, 0, 0.8);
      color: white;
      border-radius: 4px;
    }

  .btn-white {
      border-color: black;
      background-color: white;
      color: black;
      border-radius: 4px;
    }

.btn-grön {
      border-color: rgb(105, 189, 27);
      background-color: rgb(105, 189, 27);
      color: rgb(0, 0, 0);
      border-radius: 4px;
    }

.btn-oklart {
      border-color: rgb(255, 126, 41);
      background-color: rgb(255, 126, 41);
      color: black;
      border-radius: 4px;
    }

  .btn-gul {
      border-color: rgb(240, 209, 35);
      background-color: rgb(240, 209, 35);
      color: black;
      border-radius: 4px;
    }

    .btn-light-blue{
      border-color: rgb(222,234,246);
      background-color: rgb(222,234,246);
      color: black;
      border-radius: 4px;
    }
  
    .submit-row {
      padding: 12px 14px;
      margin: 0 0 20px;
      background: #f8f8f8;
      border: 1px solid #eee;
      border-radius: 4px;
      text-align: right;
      overflow: hidden;
  }
    
  .bg-pale-yellow{
    background-color: #ffffcc;
  }
  .text-warning-light{
    background-color: rgb(241, 241, 131);
  }

  .table-success-light{
    background-color: rgb(114, 211, 127);
  }

  .text-danger-light{
    background-color: rgb(238, 129, 129);
  }

  .table-light_blue{
    background-color: rgb(222,234,246);
  }

  ul:nth-of-type(1) {
    list-style-position: inside;
    padding: 0;
  }

  .table-avrådd{
    background-color: #f496a3;
  }


  
  
  .tooltip {
    position: relative;
    display: inline-block;
    opacity : 1;
    font-size: 14px;
    font-family: -apple-system, BlinkMacSystemFont, "“Segoe UI”", Roboto, "“Helvetica Neue”", Arial, sans-serif, "“Apple Color Emoji”", "“Segoe UI Emoji”", "“Segoe UI Symbol”"
  }
  
  .tooltip .tooltiptext {
    visibility: hidden;
    width: 120px;
    color: #fff;
    background-color: rgb(114, 211, 127);
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;
    /* Position the tooltip */
    position: absolute;
    opacity : 1;
    z-index: 1000;
  }

  .statuscolours {
    display: inline-block;
    position: fixed;
    width: 110px; 
    height: 145px;
  }

  .status-padding {
    border-spacing: 10px 4px;
    padding: 10px;
    text-align: center;
    align-self: center;
    width: 100%;
    height: 100%
    
  }

  .buttonwidth {
    width: 100px;
    text-align: center;
  }

  .text-smaller {
    font-size: 12px; 
  }




  .definitiontooltip {
    position: relative;
    display: inline-block;
    opacity : 1;
    font-size: 14px;
    /* font-weight: 700; */
    /* font-style: oblique; */
    text-decoration: underline;
    font-family: -apple-system, BlinkMacSystemFont, "“Segoe UI”", Roboto, "“Helvetica Neue”", Arial, sans-serif, "“Apple Color Emoji”", "“Segoe UI Emoji”", "“Segoe UI Symbol”";
  }

  .definitiontooltip .definitiontooltiptext {
    visibility: hidden;
    width: 200px;
    color: rgb(0, 0, 0);
    background-color: rgb(255, 255, 255);
    font-size: 12px;
    font-style: normal;
    text-align: left;
    border-radius: 6px;
    padding: 10px 10px;
    /* Position the tooltip */
    position: absolute;
    opacity : 1!important;
    z-index: 1;
  }

#tooltiptext span.red{
  background-color: red !important;
}
  
  .tooltip:hover .tooltiptext {
    visibility: visible;
  }
  
  .definitiontooltip:hover .definitiontooltiptext {
    visibility: visible;
    z-index: 2!important;
  }

